--- a/Carp/View/Results View/ResultsView.xib
+++ b/Carp/View/Results View/ResultsView.xib
@@ -9,73 +9,124 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Lato-Regular.ttf">
-            <string>Lato-Regular</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResultsView" customModule="Carp" customModuleProvider="target">
             <connections>
-                <outlet property="chatButton" destination="Z2d-CC-EBi" id="OXX-OQ-eQu"/>
+                <outlet property="buttonsView" destination="kV3-eV-UQu" id="IFK-at-jeW"/>
+                <outlet property="chatButton" destination="sL2-Dw-6Pv" id="zUM-mc-fbm"/>
                 <outlet property="containerView" destination="pWX-mJ-mVR" id="7lI-em-Akp"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="xc9-WO-V2c"/>
-                <outlet property="resultsButton" destination="301-Bn-bXe" id="eZA-86-Iln"/>
+                <outlet property="newCarLabelView" destination="QAz-Ax-hIh" id="Kmd-F0-BWz"/>
+                <outlet property="resultsButton" destination="lwu-Eu-oft" id="yam-9l-NN2"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="443"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="518"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="301-Bn-bXe">
-                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="70"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="70" id="vEe-VH-HpR"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z2d-CC-EBi">
-                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="70"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="70" id="OBT-de-TTH"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jZp-v2-2aL">
+                    <rect key="frame" x="0.0" y="20" width="375" height="125"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kV3-eV-UQu">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sL2-Dw-6Pv">
+                                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="70"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwu-Eu-oft">
+                                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="70"/>
+                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pAT-99-IzY">
+                                    <rect key="frame" x="187" y="17.5" width="1" height="35"/>
+                                    <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="1" id="54b-77-wsR"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="70" id="Aco-Az-f1K"/>
+                                <constraint firstItem="lwu-Eu-oft" firstAttribute="top" secondItem="kV3-eV-UQu" secondAttribute="top" id="FCl-RX-KVG"/>
+                                <constraint firstAttribute="trailing" secondItem="lwu-Eu-oft" secondAttribute="trailing" id="IOE-M0-1kV"/>
+                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="top" secondItem="kV3-eV-UQu" secondAttribute="top" id="LnP-os-XVF"/>
+                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="width" secondItem="kV3-eV-UQu" secondAttribute="width" multiplier="0.5" id="TYg-XB-ZZ9"/>
+                                <constraint firstItem="lwu-Eu-oft" firstAttribute="width" secondItem="kV3-eV-UQu" secondAttribute="width" multiplier="0.5" id="bzc-2b-zJB"/>
+                                <constraint firstAttribute="bottom" secondItem="sL2-Dw-6Pv" secondAttribute="bottom" id="haF-gi-06z"/>
+                                <constraint firstAttribute="bottom" secondItem="lwu-Eu-oft" secondAttribute="bottom" id="hbq-wh-oeC"/>
+                                <constraint firstItem="pAT-99-IzY" firstAttribute="height" secondItem="sL2-Dw-6Pv" secondAttribute="height" multiplier="0.5" id="idd-Bf-vv3"/>
+                                <constraint firstItem="pAT-99-IzY" firstAttribute="centerY" secondItem="kV3-eV-UQu" secondAttribute="centerY" id="o4o-mp-L3G"/>
+                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="leading" secondItem="kV3-eV-UQu" secondAttribute="leading" id="q9A-Ce-IoM"/>
+                                <constraint firstItem="pAT-99-IzY" firstAttribute="centerX" secondItem="kV3-eV-UQu" secondAttribute="centerX" id="zdm-X8-xHU"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QAz-Ax-hIh">
+                            <rect key="frame" x="0.0" y="70" width="375" height="55"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x92-gT-kHp">
+                                    <rect key="frame" x="0.0" y="54.5" width="375" height="0.5"/>
+                                    <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="0.5" id="D4N-dF-oqv"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIh-IM-w5I">
+                                    <rect key="frame" x="82" y="18.5" width="211.5" height="18"/>
+                                    <gestureRecognizers/>
+                                    <attributedString key="attributedText">
+                                        <fragment content="Deseja criar o seu próprio carro?">
+                                            <attributes>
+                                                <color key="NSColor" red="0.2196078431372549" green="0.5607843137254902" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="15" name="Lato-Regular"/>
+                                                <integer key="NSUnderline" value="1"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <nil key="highlightedColor"/>
+                                    <connections>
+                                        <outletCollection property="gestureRecognizers" destination="z3Z-AP-ziX" appends="YES" id="mCj-Hc-mne"/>
+                                    </connections>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="x92-gT-kHp" secondAttribute="bottom" id="6WU-kj-dpQ"/>
+                                <constraint firstAttribute="height" constant="55" id="Em5-ij-yqD"/>
+                                <constraint firstAttribute="trailing" secondItem="x92-gT-kHp" secondAttribute="trailing" id="VeR-V3-pkD"/>
+                                <constraint firstItem="rIh-IM-w5I" firstAttribute="centerY" secondItem="QAz-Ax-hIh" secondAttribute="centerY" id="byp-3x-Wn7"/>
+                                <constraint firstItem="x92-gT-kHp" firstAttribute="leading" secondItem="QAz-Ax-hIh" secondAttribute="leading" id="kyP-ag-Man"/>
+                                <constraint firstItem="rIh-IM-w5I" firstAttribute="centerX" secondItem="QAz-Ax-hIh" secondAttribute="centerX" id="y6o-CM-vj0"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWX-mJ-mVR">
-                    <rect key="frame" x="0.0" y="70" width="375" height="373"/>
+                    <rect key="frame" x="0.0" y="145" width="375" height="373"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="370" id="L2E-RY-ywx"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fu1-uu-GuR">
-                    <rect key="frame" x="187" y="17.5" width="1" height="35"/>
-                    <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="1" id="nph-aj-SlH"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Z2d-CC-EBi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2OT-vG-htd"/>
-                <constraint firstItem="pWX-mJ-mVR" firstAttribute="top" secondItem="301-Bn-bXe" secondAttribute="bottom" id="9La-to-dg4"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Z2d-CC-EBi" secondAttribute="trailing" id="KBy-ax-AHB"/>
-                <constraint firstItem="fu1-uu-GuR" firstAttribute="height" secondItem="301-Bn-bXe" secondAttribute="height" multiplier="0.5" id="Lvt-pv-WbR"/>
+                <constraint firstItem="jZp-v2-2aL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="MrJ-9c-fX1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="pWX-mJ-mVR" secondAttribute="trailing" id="Q0w-pr-iMk"/>
-                <constraint firstItem="fu1-uu-GuR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="X5E-Qk-zgj"/>
+                <constraint firstItem="jZp-v2-2aL" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="STl-EW-WQ9"/>
+                <constraint firstItem="pWX-mJ-mVR" firstAttribute="top" secondItem="jZp-v2-2aL" secondAttribute="bottom" id="VkA-5t-doL"/>
                 <constraint firstItem="pWX-mJ-mVR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ZHq-KV-B1R"/>
-                <constraint firstItem="301-Bn-bXe" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="aBu-Nq-QIS"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="pWX-mJ-mVR" secondAttribute="bottom" id="c17-ta-2gc"/>
-                <constraint firstItem="301-Bn-bXe" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="j6j-FC-oTy"/>
-                <constraint firstItem="Z2d-CC-EBi" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="sd5-Po-bYd"/>
-                <constraint firstItem="301-Bn-bXe" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ssE-vD-pdt"/>
-                <constraint firstItem="fu1-uu-GuR" firstAttribute="centerY" secondItem="301-Bn-bXe" secondAttribute="centerY" id="uEl-J8-QV7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jZp-v2-2aL" secondAttribute="trailing" id="l68-Gp-9Qy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="34" y="-88"/>
+            <point key="canvasLocation" x="32.799999999999997" y="-54.872563718140931"/>
         </view>
+        <tapGestureRecognizer id="z3Z-AP-ziX">
+            <connections>
+                <action selector="didTapNewCarLabel:" destination="-1" id="HOD-fJ-RTP"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
 </document>
