--- a/Carp/Controller/Alert/AlertVC.xib
+++ b/Carp/Controller/Alert/AlertVC.xib
@@ -21,9 +21,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ptm-kk-HVM" customClass="AlertView" customModule="Carp" customModuleProvider="target">
+                <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ptm-kk-HVM" customClass="AlertView" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="37.5" y="66.5" width="300" height="534"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
