--- a/Carp/View/Alert/AlertView.xib
+++ b/Carp/View/Alert/AlertView.xib
@@ -10,8 +10,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Lato-Regular.ttf">
-            <string>Lato-Regular</string>
+        <array key="Lato-Bold.ttf">
+            <string>Lato-Bold</string>
         </array>
     </customFonts>
     <objects>
@@ -22,26 +22,28 @@
                 <outlet property="doneButton" destination="0H7-rq-YLC" id="2H3-MQ-Ggp"/>
                 <outlet property="priceInputContainerView" destination="ote-AF-uNQ" id="fJa-4v-Qrw"/>
                 <outlet property="priceInputField" destination="Z2w-ys-ALY" id="7AL-xP-Urs"/>
+                <outlet property="stackView" destination="B5H-ye-TK6" id="ajj-hn-ofo"/>
                 <outlet property="textContainerView" destination="kWU-GQ-SfS" id="l7G-39-WP4"/>
                 <outlet property="textView" destination="Wnu-mQ-DBV" id="L6Y-0M-ZZD"/>
+                <outlet property="textViewHeight" destination="bRp-8k-LZZ" id="Rz8-fQ-E8o"/>
                 <outlet property="titleContainerView" destination="brz-pc-lJe" id="Vrb-YL-Icc"/>
                 <outlet property="titleLabel" destination="dhL-Mt-A7P" id="PQg-Qa-ZCb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="570"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B5H-ye-TK6">
-                    <rect key="frame" x="0.0" y="100" width="375" height="370"/>
+                <stackView opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B5H-ye-TK6">
+                    <rect key="frame" x="0.0" y="40" width="375" height="490"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="brz-pc-lJe">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhL-Mt-A7P">
-                                    <rect key="frame" x="164" y="23" width="47.5" height="24"/>
-                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
+                                    <rect key="frame" x="163.5" y="23" width="48.5" height="24"/>
+                                    <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="20"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -54,10 +56,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kWU-GQ-SfS">
-                            <rect key="frame" x="0.0" y="70" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="70" width="375" height="220"/>
                             <subviews>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wnu-mQ-DBV">
-                                    <rect key="frame" x="30" y="0.0" width="315" height="100"/>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wnu-mQ-DBV">
+                                    <rect key="frame" x="25" y="0.0" width="325" height="220"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <attributedString key="attributedText"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -65,15 +67,15 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="Wnu-mQ-DBV" firstAttribute="leading" secondItem="kWU-GQ-SfS" secondAttribute="leading" constant="30" id="4Gi-0Z-bIh"/>
+                                <constraint firstItem="Wnu-mQ-DBV" firstAttribute="leading" secondItem="kWU-GQ-SfS" secondAttribute="leading" constant="25" id="4Gi-0Z-bIh"/>
                                 <constraint firstItem="Wnu-mQ-DBV" firstAttribute="top" secondItem="kWU-GQ-SfS" secondAttribute="top" id="MPB-j4-xF2"/>
-                                <constraint firstAttribute="trailing" secondItem="Wnu-mQ-DBV" secondAttribute="trailing" constant="30" id="WGB-1S-wiE"/>
+                                <constraint firstAttribute="trailing" secondItem="Wnu-mQ-DBV" secondAttribute="trailing" constant="25" id="WGB-1S-wiE"/>
                                 <constraint firstAttribute="bottom" secondItem="Wnu-mQ-DBV" secondAttribute="bottom" id="We1-tc-Rl2"/>
-                                <constraint firstAttribute="height" constant="100" id="bRp-8k-LZZ"/>
+                                <constraint firstAttribute="height" constant="220" id="bRp-8k-LZZ"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ote-AF-uNQ">
-                            <rect key="frame" x="0.0" y="170" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="290" width="375" height="100"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2w-ys-ALY">
                                     <rect key="frame" x="20" y="35" width="335" height="30"/>
@@ -92,7 +94,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tfg-K6-EsH">
-                            <rect key="frame" x="0.0" y="270" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="390" width="375" height="100"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0H7-rq-YLC">
                                     <rect key="frame" x="25" y="25" width="325" height="50"/>
@@ -111,7 +113,6 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="B5H-ye-TK6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="2Qx-KS-iN8"/>
                 <constraint firstItem="B5H-ye-TK6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="GT5-Xs-wlJ"/>
